fix gap in the overview for IE

--- a/src/tour.scss
+++ b/src/tour.scss
@@ -283,6 +283,7 @@ $opacity: 0.8;
 }
 
 .tourjs-overview-line {
+  height: 30px;
   padding-bottom: 10px;
 
   svg { width: 100%; }
